syntax = "proto3";

option java_package = "com.example.showtracker";
option java_multiple_files = true;

message ProtoGenreItem {
  int32 idGenre = 1;
  string nameGenre = 2;
}

message ProtoSeasonItem {
  int32 idSeason = 1;
  int32 season_number = 2;
  int32 episode_count = 3;
}

message ProtoShowItem {
  int32 id = 1;
  string name = 2;
  string overview = 3;
  string first_air_date = 4;
  string last_air_date = 5;
  string poster_path = 6;
  string backdrop_path = 7;
  float vote_average = 8;
  int32 vote_count = 9;
  bool watchlist = 10;
  repeated ProtoGenreItem genres = 11;
  repeated ProtoSeasonItem seasons = 12;
}

message ProtoShowItems {
  repeated ProtoShowItem shows = 1;
}